<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Unreal</string>
    <string name="title_home">主页</string>
    <string name="title_apps">应用</string>
    <string name="title_settings">设置</string>
    <string name="apps_enabled_count">已启用 %d 个应用</string>
    <string name="version_tem">%s (%d) - %s</string>
    <string name="activated_icon">激活图标</string>
    <string name="is_activated">已激活</string>
    <string name="not_activated">未激活</string>
    <string name="select_global_video">选择全局视频</string>
    <string name="app_icon">应用图标</string>
    <string name="is_enabled">已启用</string>
    <string name="carousel_image">CarouselImage</string>
    <string name="menu_hide">隐藏</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_not_camera_app">非相机应用</string>
    <string name="menu_system_app">系统应用</string>
    <string name="menu_sort">排序</string>
    <string name="menu_reverse">倒序</string>
    <string name="item_sort_by_update_time">更新时间</string>
    <string name="item_sort_by_install_time">安装时间</string>
    <string name="item_sort_by_package_name">应用包名</string>
    <string name="item_sort_by_name">应用名称</string>
    <string name="version_template">%s (%s)</string>
    <string name="app_config_directory">应用配置目录: %s/UnrealConfigs/%s/config/</string>
    <string name="app_config">应用配置</string>
    <string name="restricted_icon">restricted icon\n</string>
    <string name="enabled">启用</string>
    <string name="unenabled">未启用</string>
    <string name="carousel_app_icon">轮播视图应用图标</string>
    <string name="video_first_frame">视频第一帧</string>
    <string name="info_icon">Info</string>
    <string name="select_video">选择视频</string>
    <string name="module">模块</string>
    <string name="force_show_permission_lack">强制显示权限缺失提示</string>
    <string name="show_permission_summary">当应用的访问外部储存的权限缺失时，显示一个Toast</string>
    <string name="disable_toast">关闭提示消息</string>
    <string name="disable_toast_summary">关闭模块所有的提示消息</string>
    <string name="force_private_dir">强制所有应用使用私有目录访问</string>
    <string name="force_private_dir_summary">强制将视频路径重定向至宿主的私有目录（解决文件访问权限问题）</string>
    <string name="play_audio">播放视频声音</string>
    <string name="play_audio_summary">开启后将在相机预览界面播放视频声音，同时录制的视频也会带有声音</string>
    <string name="disable_module">临时关闭模块</string>
    <string name="disable_module_summary">当模块在运行过程中出现技术性故障或Bug时，临时关闭模块的所有Hook操作</string>
    <string name="theme">主题</string>
    <string name="theme_color_system">系统主题色</string>
    <string name="theme_color">主题颜色</string>
    <string name="pure_black_dark_theme">纯黑主题</string>
    <string name="pure_black_dark_theme_summary">当深色主题启用时使用纯黑主题</string>

    <!-- Colors -->
    <string name="color_default">默认</string>
    <string name="color_sakura">樱花</string>
    <string name="color_red">红色</string>
    <string name="color_pink">粉色</string>
    <string name="color_purple">紫色</string>
    <string name="color_deep_purple">深紫</string>
    <string name="color_indigo">靛青</string>
    <string name="color_blue">蓝色</string>
    <string name="color_light_blue">浅蓝</string>
    <string name="color_cyan">青色</string>
    <string name="color_teal">青绿</string>
    <string name="color_green">绿色</string>
    <string name="color_light_green">浅绿</string>
    <string name="color_lime">黄绿</string>
    <string name="color_yellow">黄色</string>
    <string name="color_amber">琥珀</string>
    <string name="color_orange">橙色</string>
    <string name="color_deep_orange">深橙</string>
    <string name="color_brown">棕色</string>
    <string name="color_blue_grey">灰蓝</string>
    <string name="user_interface">界面</string>
    <string name="expand_collapse">折叠开关</string>
</resources>