<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_root"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="0dp"
    android:focusable="true"
    android:minHeight="85dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:rippleColor="@color/ripple_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_icon"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/app_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/enabled_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/is_enabled"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/version_template"
                android:textColor="?attr/colorOnSurface"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/package_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:alpha="0.65"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnSurface"
                android:textSize="13sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/camera_app_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="16dp"
            android:alpha="0.15"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/outline_photo_camera_24"
            android:visibility="gone"
            app:tint="?attr/colorOnSurface" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>