<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.AppDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/outline_arrow_back_24"
                app:navigationIconTint="?attr/colorOnSurface" />

        </com.google.android.material.appbar.SubtitleCollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <io.twinkle.unreal.widget.MaterialWarningBar
                android:id="@+id/warning_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:infoIcon="@drawable/outline_info_24"
                app:title="@string/title_apps" />

            <FrameLayout
                android:id="@+id/app_item_container"
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/app_item_content"
                    layout="@layout/app_item" />

            </FrameLayout>

            <io.twinkle.unreal.widget.MainSwitchBar
                android:id="@+id/main_switch_bar"
                app:title="@string/enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select_global_video"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:cardBackgroundColor="@color/color_tertiary_container_alpha_50"
                app:cardCornerRadius="28dp"
                app:rippleColor="@color/ripple_color">

                <ImageView
                    android:id="@+id/first_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/video_first_frame"
                    android:foreground="@drawable/video_frame_mask"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="32dp"
                    android:text="@string/select_video"
                    android:textColor="?attr/colorOnTertiaryContainer"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    style="@style/MainSwitchText.Settingslib" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/expand_button"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/expand_collapse"
                    android:scaleType="centerCrop"
                    app:icon="@drawable/outline_fullscreen_24"
                    app:iconTint="?attr/colorOnTertiaryContainer" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>