<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            android:fitsSystemWindows="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/status_panel"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="?attr/colorErrorContainer"
                app:cardCornerRadius="28dp"
                app:rippleColor="@color/ripple_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/activated_icon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/activated_icon"
                        android:src="@drawable/outline_close_24"
                        app:tint="?attr/colorOnErrorContainer" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activated_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_activated"
                            android:textColor="?attr/colorOnErrorContainer"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/activated_subtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.65"
                            android:text="@string/not_activated"
                            android:textColor="?attr/colorOnErrorContainer"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select_global_video"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:cardBackgroundColor="@color/color_tertiary_container_alpha_50"
                app:cardCornerRadius="28dp"
                app:rippleColor="@color/ripple_color">

                <ImageView
                    android:id="@+id/first_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/video_first_frame"
                    android:foreground="@drawable/video_frame_mask"
                    android:scaleType="centerCrop" />

                <TextView
                    style="@style/MainSwitchText.Settingslib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="32dp"
                    android:text="@string/select_global_video"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="?attr/colorOnTertiaryContainer" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/expand_button"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/expand_collapse"
                    android:scaleType="centerCrop"
                    app:icon="@drawable/outline_fullscreen_24"
                    app:iconTint="?attr/colorOnTertiaryContainer" />


            </com.google.android.material.card.MaterialCardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/carousel_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_view"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:elevation="1dp"
                    android:indeterminate="true"
                    android:visibility="visible" />

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>